Fixed big font for ups on small screens

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -8,4 +8,11 @@
 }
 
 
+.text-responsive {
+ 
+    @media (max-width:400px ) {
+        h2 {font-size: 1rem }
+    }
+}
+
 @import "~bootstrap/scss/bootstrap";
